# d1-migration-manager

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
d1_migration_manager/: __init__.py  __main__.py  changefeed.py  migration.py  sql.py
docs/: conf.py  index.rst  reference.rst
tests/: test_changefeed.py  test_migration.py  test_sql.py
