[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "d1-migration-manager"
authors = [
    {name = "Alex Grand", email = "me@alexgrand.dev"},
]
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "black==25.1.0",
    "isort==6.0.1"
]
doc = [
    "sphinx-rtd-theme==3.0.2",
    "Sphinx==8.2.3",
    "myst-parser==4.0.1"
]

[tool.setuptools]
packages = ["d1_migration_manager"]
